update some posts banner images

--- a/themes/dzb/source/css/scss/_index.scss
+++ b/themes/dzb/source/css/scss/_index.scss
@@ -102,6 +102,8 @@
             position: relative;
             height: 300px;
             text-align: center;
+            background-repeat: no-repeat;
+            background-size: cover;
 
             .anchor {
                 position: fixed;
