--- a/themes/dzb/source/css/scss/_index.scss
+++ b/themes/dzb/source/css/scss/_index.scss
@@ -139,6 +139,10 @@
                 padding: 30px 30px;
             }
 
+            h2 {
+                font-weight: 600;
+            }
+
             a {
                 color: rgba(234, 97, 83, 0.85);
                 &:hover {
