--- a/themes/dzb/layout/common/head.ejs
+++ b/themes/dzb/layout/common/head.ejs
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html<%= config.language ? " lang=" + config.language.substring(0, 2) : ""%>>
+<html<%= config.language ? " lang=" + config.language : ""%>>
 <head>
     <meta charset="utf-8">
     <title><%= config.title %></title>
