--- a/themes/dzb/source/css/scss/_side.scss
+++ b/themes/dzb/source/css/scss/_side.scss
@@ -3,12 +3,9 @@
     position: relative;
     width: 100%;
     height: 100%;
-    padding-left: 320px;
     transition: all .3s ease;
 
     &.full {
-        padding-left: 0;
-
         .cover {
             width: 0;
             display: none;
@@ -25,6 +22,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     color: #f8f8f8;
+    z-index: 100;
 
     .cover-inner {
         position: absolute;
