--- a/themes/dzb/source/css/scss/_index.scss
+++ b/themes/dzb/source/css/scss/_index.scss
@@ -91,6 +91,7 @@
                 left: 0;
                 width: 100%;
                 height: 100%;
+                background-position: center center;
             }
 
 
@@ -104,6 +105,7 @@
             text-align: center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-position: center;
 
             .anchor {
                 position: fixed;
